:lipstick: Feat : RegisterDetailFragment -> RegisterPriceFragment 화면 전환 기능 구현 - register_graph.xml 파일에 destination으로 RegisterPriceFragment 추가 - RegisterDetailFragment에서 RegisterPriceFragment로 이동하는 액션 추가 - RegisterDetailFragment의 다음 버튼 클릭 시 화면 전환 기능 구현
Related to: #63

--- a/AOS/app/src/main/res/navigation/register_graph.xml
+++ b/AOS/app/src/main/res/navigation/register_graph.xml
@@ -36,5 +36,14 @@
         android:id="@+id/registerDetailFragment"
         android:name="com.softeer.team6four.ui.mypage.register.RegisterDetailFragment"
         android:label="RegisterDetailFragment"
-        tools:layout="@layout/fragment_register_detail"/>
+        tools:layout="@layout/fragment_register_detail">
+        <action
+            android:id="@+id/action_registerDetailFragment_to_registerPriceFragment"
+            app:destination="@id/registerPriceFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerPriceFragment"
+        android:name="com.softeer.team6four.ui.mypage.register.RegisterPriceFragment"
+        android:label="RegisterPriceFragment"
+        tools:layout="@layout/fragment_register_price"/>
 </navigation>
