--- a/AOS/app/src/main/res/layout/fragment_register_price.xml
+++ b/AOS/app/src/main/res/layout/fragment_register_price.xml
@@ -78,10 +78,9 @@
             android:id="@+id/per_kwh_input_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="124dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
-            android:hint="@string/input_price_hint"
+            app:hintEnabled="false"
             android:textColorHint="@color/gray_300"
             app:boxBackgroundColor="@color/gray_050"
             app:boxCornerRadiusBottomEnd="@dimen/radius_normal"
@@ -89,17 +88,22 @@
             app:boxCornerRadiusTopEnd="@dimen/radius_normal"
             app:boxCornerRadiusTopStart="@dimen/radius_normal"
             app:boxStrokeWidth="0dp"
+            app:hintAnimationEnabled="false"
             app:layout_constraintEnd_toStartOf="@id/per_kwh_won"
             app:layout_constraintStart_toEndOf="@id/tv_per_kwh"
             app:layout_constraintTop_toBottomOf="@+id/iv_price_icon">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_per_kwh"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:paddingVertical="8dp"
+                android:textColor="@color/main_400"
+                android:hint="@string/input_price_hint"
                 android:textSize="24sp"
+                android:inputType="number"
+                android:textAlignment="center"
                 android:textStyle="bold" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -135,10 +139,10 @@
             android:id="@+id/per_hour_input_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="100dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
-            android:hint="@string/input_price_hint"
+            app:hintEnabled="false"
+            app:hintAnimationEnabled="false"
             android:textColorHint="@color/gray_300"
             app:boxBackgroundColor="@color/gray_050"
             app:boxCornerRadiusBottomEnd="@dimen/radius_normal"
@@ -152,11 +156,15 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_per_hour"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:paddingVertical="8dp"
+                android:textColor="@color/main_400"
+                android:hint="@string/input_price_hint"
                 android:textSize="18sp"
+                android:inputType="number"
+                android:textAlignment="center"
                 android:textStyle="bold" />
         </com.google.android.material.textfield.TextInputLayout>
 
