:lipstick: Feat : RegisterDescriptionFragment 화면 UI 구성 - 카밥 사용 설명서 작성 화면을 담당하는 RegisterDescriptionFragment 화면 UI 컴포넌트 배치
Related to: #63

--- a/AOS/app/src/main/res/values/themes.xml
+++ b/AOS/app/src/main/res/values/themes.xml
@@ -29,4 +29,9 @@
         <item name="chipStartPadding">8dp</item>
         <item name="chipMinTouchTargetSize">0dp</item>
     </style>
+
+    <style name="roundedImageViewStyle" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">8dp</item>
+    </style>
 </resources>
