:lipstick: Feat : RegisterPriceFragment -> RegisterDescriptionFragment 화면 전환 기능 구현 - register_graph.xml 파일에 destination으로 registerDescriptionFragment 추가 - RegisterPriceFragment에서 RegisterDescriptionFragment 이동 액션 추가 - RegisterPriceFragment의 다음 버튼 클릭 시 RegisterDescriptionFragment 전환 기능 구현 Related to: #63

--- a/AOS/app/src/main/res/navigation/register_graph.xml
+++ b/AOS/app/src/main/res/navigation/register_graph.xml
@@ -45,5 +45,14 @@
         android:id="@+id/registerPriceFragment"
         android:name="com.softeer.team6four.ui.mypage.register.RegisterPriceFragment"
         android:label="RegisterPriceFragment"
-        tools:layout="@layout/fragment_register_price"/>
+        tools:layout="@layout/fragment_register_price">
+        <action
+            android:id="@+id/action_registerPriceFragment_to_registerDescriptionFragment"
+            app:destination="@id/registerDescriptionFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerDescriptionFragment"
+        android:name="com.softeer.team6four.ui.mypage.register.RegisterDescriptionFragment"
+        android:label="RegisterDescriptionFragment"
+        tools:layout="@layout/fragment_register_description"/>
 </navigation>
