:lipstick: Feat : RegisterDescriptionFragment -> RegisterTimeFragment 화면 전환 기능 구현 - register_graph.xml 파일에 destination으로 RegisterTimeFragment 추가 - register_graph.xml 파일에 RegisterDescriptionFragment -> RegisterTimeFragment 이동 액션 추가 - RegisterDescriptionFragment 다음 버튼 클릭 시 화면 이동 기능 구현
Related to: #63

--- a/AOS/app/src/main/res/navigation/register_graph.xml
+++ b/AOS/app/src/main/res/navigation/register_graph.xml
@@ -54,5 +54,14 @@
         android:id="@+id/registerDescriptionFragment"
         android:name="com.softeer.team6four.ui.mypage.register.RegisterDescriptionFragment"
         android:label="RegisterDescriptionFragment"
-        tools:layout="@layout/fragment_register_description"/>
+        tools:layout="@layout/fragment_register_description">
+        <action
+            android:id="@+id/action_registerDescriptionFragment_to_registerTimeFragment"
+            app:destination="@id/registerTimeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerTimeFragment"
+        android:name="com.softeer.team6four.ui.mypage.register.RegisterTimeFragment"
+        android:label="RegisterTimeFragment"
+        tools:layout="@layout/fragment_register_time"/>
 </navigation>
