--- a/AOS/app/src/main/res/layout/fragment_register_location.xml
+++ b/AOS/app/src/main/res/layout/fragment_register_location.xml
@@ -133,7 +133,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="14dp"
             android:background="@drawable/background_normal_radius_btn"
-            android:paddingVertical="16sp"
+            android:paddingVertical="16dp"
             android:text="@string/next"
             android:textSize="16sp"
             android:textStyle="bold"
