--- a/AOS/app/src/main/res/layout/fragment_register_time.xml
+++ b/AOS/app/src/main/res/layout/fragment_register_time.xml
@@ -199,7 +199,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="14dp"
             android:background="@drawable/background_normal_radius_btn"
-            android:paddingVertical="16sp"
+            android:paddingVertical="16dp"
             android:text="@string/complete_register"
             android:textSize="16sp"
             android:textStyle="bold"
