--- a/AOS/app/src/main/res/values/dimens.xml
+++ b/AOS/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="step_line_radius">7dp</dimen>
     <dimen name="progress_bar_radius">7dp</dimen>
     <dimen name="register_location_searchbar_radius">12dp</dimen>
+    <dimen name= "upload_dialog_radius">12dp</dimen>
 </resources>
