--- a/AOS/app/src/main/res/navigation/register_graph.xml
+++ b/AOS/app/src/main/res/navigation/register_graph.xml
@@ -63,5 +63,15 @@
         android:id="@+id/registerTimeFragment"
         android:name="com.softeer.team6four.ui.mypage.register.RegisterTimeFragment"
         android:label="RegisterTimeFragment"
-        tools:layout="@layout/fragment_register_time"/>
+        tools:layout="@layout/fragment_register_time">
+        <action
+            android:id="@+id/action_registerTimeFragment_to_registerCompleteFragment"
+            app:destination="@id/registerCompleteFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerCompleteFragment"
+        android:name="com.softeer.team6four.ui.mypage.register.RegisterCompleteFragment"
+        android:label="RegisterCompleteFragment"
+        tools:layout="@layout/fragment_register_complete"/>
+
 </navigation>
