:recycle: Fix : fragment_register_complete.xml 파일 이미지 id 추가 - fragment_register_complete.xml 파일 가운데 이미지 id 추가
Related to: #63

--- a/AOS/app/src/main/res/layout/fragment_register_complete.xml
+++ b/AOS/app/src/main/res/layout/fragment_register_complete.xml
@@ -48,6 +48,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_register_location_title" />
 
         <ImageView
+            android:id="@+id/iv_register_complete_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="120dp"
