:truck: Fix : MyChargerFragment -> MyChargerListFragment 이름 변경 - 드로워에서 내 카밥 리스트 아이템 선택 시 나타나는 화면인 MyChargerFragment 이름을 MyChargerListFragment로 변경
Related to: #83

--- a/AOS/app/src/main/res/navigation/nav_graph.xml
+++ b/AOS/app/src/main/res/navigation/nav_graph.xml
@@ -25,9 +25,9 @@
     </fragment>
     <fragment
         android:id="@+id/myChargerFragment"
-        android:name="com.softeer.team6four.ui.mypage.charger.MyChargerFragment"
+        android:name="com.softeer.team6four.ui.mypage.charger.MyChargerListFragment"
         android:label="MyChargerFragment"
-        tools:layout="@layout/fragment_my_charger" />
+        tools:layout="@layout/fragment_my_charger_list" />
     <fragment
         android:id="@+id/myPointFragment"
         android:name="com.softeer.team6four.ui.mypage.point.MyPointFragment"
