:truck: Fix : 드로워에 표시되는 내 카밥 확인 아이템 이름을 내 카밥 리스트로 변경 - 드로워에 표시되는 내 카밥 확인 아이템 이름을 내 카밥 리스트로 변경 - 관련된 resource 이름 변경 Related to: #83

--- a/AOS/app/src/main/res/menu/navigation_drawer.xml
+++ b/AOS/app/src/main/res/menu/navigation_drawer.xml
@@ -12,8 +12,8 @@
             android:id="@+id/my_reservation_item"
             android:title="@string/my_reservation" />
         <item
-            android:id="@+id/my_charger_item"
-            android:title="@string/my_charger" />
+            android:id="@+id/my_charger_list_item"
+            android:title="@string/my_charger_list" />
     </group>
 
 </menu>
