:truck: Feat : 내 카밥 리스트 화면을 담당하는 MyChargerListFragment 화면 UI 구성 - fragment_my_charger_list.xml 파일에 UI 컴포넌트 배치 - 리사이클러 뷰 아이템 (등록된 내 카밥 정보) 레이아웃 구성
Related to: #83

--- a/AOS/app/src/main/res/values/themes.xml
+++ b/AOS/app/src/main/res/values/themes.xml
@@ -34,4 +34,9 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">8dp</item>
     </style>
+
+    <style name="MyChargerImageStyle" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">4dp</item>
+    </style>
 </resources>
