--- a/AOS/app/src/main/res/layout/fragment_my_charger_list.xml
+++ b/AOS/app/src/main/res/layout/fragment_my_charger_list.xml
@@ -27,13 +27,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
             android:backgroundTint="@color/gray_000"
             android:contentDescription="@string/arrow_back_description"
             android:padding="0dp"
             android:src="@drawable/icon_arrow_back"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@id/tv_my_charger_list_title"
+            app:layout_constraintBottom_toBottomOf="@id/tv_my_charger_list_title"/>
 
         <TextView
             android:id="@+id/tv_my_charger_list_title"
